--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
 
 </head>
 <body>
+  <div class="page">
+  <img src="images/image-qr-code.png" alt="QR code to visit Frontend Mentor">
 
-  Improve your front-end skills by building projects
+  <h2>Improve your front-end skills by building projects</h2>
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+  <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Preston Mclean</a>.
+  </div>
   </div>
 </body>
 </html>
